--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="text">
       <h2>About</h2>
       <p>
-      Hi, I am Chidinma, I have passion for building cloud-based architectures, that are scalable and fault-tolerant. I love learning new skills, and I adapt to various work pressure; delivering high quality resources on demand.
+      Hi, I am Chidinma, I have passion for building cloud-based architectures/infrasructures, that are scalable, cost efficient and fault-tolerant. I love learning new skills, and I adapt to various work pressure; delivering high quality resources on demand.
       </p>
     </div>
   </section>
@@ -60,7 +60,8 @@
         <li title="🏔">CloudFront</li>
         <li title="📦">EC2</li>
         <li title="🦕">VPC</li>
-        <li title="🎯">Linux</li>
+        <li title="🎯">Linux</li> 
+        <li title="🎯">Ansible</li>
         <li title="🧲">Github</li>
         <li title="🏷">CodeCommit</li>
         <li title="🤖">RDS</li>
@@ -118,13 +119,12 @@ May, 2023 - Present
  
 <section id="work">
     <div class="text">
-      <h1>Education & Certification →</h1>
+      <h1>Certification →</h1>
     </div>
   </section>
   <section class="experience">
     <div class="text">
       <h2>Relevant IT Course</h2>
-      <h3><a href="#"><li></li></a></h3>
       <p>
 Cloudspace Academy
       </p>
