--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Cloudspace Academy
 
       </p><br> <br>
       <h2>Certifications</h2>
-      <h3><a href="#"><li></li></a></h3>
+      <h3><a href="#"><li>AWS Certified Solutions Architect Associate (in view)</li></a></h3>
       <p>AWS Certified Solutions Architect Associate (in view)</p>
       
       </ul>
