--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ May, 2023 - Present
       <ul>
         <li>Manage users and groups securely with AWS Identity and Access Management (IAM) to ensure appropriate access control and reduce security risks.</li>
         <li>Build infrastructures to assist clients in migrating from on-premises setups to the cloud using AWS services.</li>
-        <li>Design and implement CI/CD pipelines with AWS CodeCommit and AWS CodeBuild to improve software delivery and increase release frequency.</li>
+        <li>Design and implement CI/CD pipelines with Github, AWS CodeCommit and AWS CodeBuild to improve software delivery and increase release frequency.</li>
+        <li>Build a code pipeline for continuous delivery/deployment of codes for resource provisioning using cloudformation and S3 bucket for deployment.</li>
+        <li>Utilize Ansible as controller to effeciently automate, configure and manage infrastructure to reduce all round complexity.</li>
         <li>Develop a fault-tolerant and highly available architecture with draw.io and various AWS resources to optimize uptime and minimize downtime.</li>
         <li>Utilize AWS CodePipeline to automate resource deployment, minimizing the need for manual intervention.</li>
         <li>Design and set up infrastructures for migrating clients from on-premises systems to the cloud with AWS Migration Services.</li>
@@ -147,3 +149,5 @@ Cloudspace Academy
 
 </body>
 </html>
+<footer>
+  <p>&copy; 2024 Chidinma Ukandu</p>
