--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ May, 2023 - Present
     <div class="text">
       <h2>Relevant IT Course</h2>
       <p>
-      <h3>Cloudspace Consulting</h3>
+      <h3>Cloudspace Consulting LLC</h3>
       </p>
       <br>
       <h3><a href="#"><li>AWS Cloud & DevOps Engineer</li></a></h3>
@@ -157,9 +157,13 @@ May, 2023 - Present
     <br>
     <h3><a href="#"><li>Bachelors of Science in Nursing</li></a></h3>
   </p>
-  <ul>
-    <l1>National Open University of Nigeria (2017)</l1>
   </ul>
+  <p>National Open University of Nigeria (2017)</p>
+  </ul>
+  <br>
+  <p>
+    <h3><a href="#"><li>Masters in Nursing Science (ongoing)</li></a></h3>
+    <p><a href="#"></a>Walden University | Minneapolis, Minnesota</p>
   </p><br> <br>
     <p>
     
@@ -173,7 +177,7 @@ May, 2023 - Present
 </section>
 <section class="experience">
   <div class="text">
-    <h2>Projects Delivered for Cloudspace Consulting</h2>
+    <p>Projects Delivered for Cloudspace Consulting LLC</p>
     <p>
     <h3><a href="#"><li></li></a></h3>
     </p>
